[package]
name = "sawtooth-intkey-tp-rust"
version = "0.1.0"
authors = ["GuiltyMorishita <morilliantblue@gmail.com>"]
edition = "2018"

[[bin]]
name = "intkey-tp-rust"
path = "src/main.rs"

[dependencies]
sawtooth-sdk = "0.4"
rust-crypto = "0.2"
clap = "2"
log = "0.4"
log4rs = "0.8"
cbor-codec = "0.7"
